--- a/src/component/calendar/index.scss
+++ b/src/component/calendar/index.scss
@@ -1,4 +1,14 @@
 .calendar {
+  // 결혼식 날짜 텍스트 가독성 향상
+  .wedding-date-text {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #8B0000 !important;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+    margin: 0.5rem 0;
+    text-align: center;
+  }
+
   .calendar-wrapper {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
@@ -27,6 +37,7 @@
 
         > span {
           z-index: 1;
+          color: #FFFCED !important;
         }
 
         > div.heart {
