--- a/src/component/information/index.scss
+++ b/src/component/information/index.scss
@@ -16,6 +16,9 @@
       border-radius: 1rem;
       background-color: var(--alt-bg-color);
       border: 1px solid var(--alt-color);
+      color: #fffced !important;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
     }
   }
   .content {
@@ -46,10 +49,18 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
+      
+      // 모달 내부 텍스트 가독성 개선
+      * {
+        color: var(--dark-color) !important;
+      }
+      
       .name {
         margin-bottom: 0.3rem;
         .relation {
           opacity: 0.7;
+          color: #8B0000 !important;
+          font-weight: bold;
         }
       }
       .copy-button {
