--- a/src/component/gallery/index.scss
+++ b/src/component/gallery/index.scss
@@ -137,12 +137,13 @@ $transition-duration: 0.3s;
     padding: 0 0.7rem 0.7rem 0.7rem;
     .photo-list {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-auto-rows: 12rem;
+      grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: auto;
       gap: 0.5rem;
       img {
         width: 100%;
-        height: 100%;
+        height: auto;
+        aspect-ratio: 1 / 1;
         object-fit: cover;
       }
     }
